# swagger.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.1.0",
+  "openapi": "3.0.1",
   "info": {
     "version": "1.0.1",
     "title": "HealthyHub",
@@ -203,6 +203,46 @@
         }
       }
     },
+    "/api/user/current": {
+      "get": {
+        "tags": ["User"],
+        "summary": "Receiving user data",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "responses": {
+          "200": {
+            "description": "Data for the HomePage",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SendingUserData"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Token has expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/errorUserTokenExpiredResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/errorNotfound"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/user/update": {
       "put": {
         "tags": ["User"],
@@ -226,7 +266,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UpdateUserInformationAnd Setting"
+                  "$ref": "#/components/schemas/UpdateUserInformation"
                 }
               }
             }
@@ -242,11 +282,11 @@
             }
           },
           "404": {
-            "description": "Email or password is wrong",
+            "description": "Not found",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/errorUserTokenExpiredResponse"
+                  "$ref": "#/components/schemas/errorNotfound"
                 }
               }
             }
@@ -338,16 +378,6 @@
           }
         }
       },
-      "UserRegistration": {
-        "type": "object",
-        "required": ["email"],
-        "properties": {
-          "email": {
-            "type": "string",
-            "example": "jacob@gmail.com"
-          }
-        }
-      },
       "SignInUser": {
         "type": "object",
         "required": ["email", "password"],
@@ -364,16 +394,6 @@
           }
         }
       },
-      "UserWithTokenSerializer": {
-        "type": "object",
-        "required": ["token"],
-        "properties": {
-          "token": {
-            "type": "string",
-            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY1N2YyZmQ2MjAyNGNkMzFjYTNhZDYzNyIsImlhdCI6MTcwMjgzNDMwMCwiZXhwIjoxNzAzNjYyMzAwfQ.Ch5pvle9Oon-r1eErOkd4J7qYY8yAcyhHyhdongUTy4"
-          }
-        }
-      },
       "UserForgotPassword": {
         "type": "object",
         "required": ["email"],
@@ -385,30 +405,6 @@
           }
         }
       },
-      "NewPasswordResetResponse": {
-        "type": "object",
-        "required": ["message", "password"],
-        "properties": {
-          "message": {
-            "type": "string",
-            "example": "This is your new password as requested"
-          },
-          "password": {
-            "type": "string",
-            "example": "Uakgb_J5m9g-0JDMbcJqLJ"
-          }
-        }
-      },
-      "SignOutUser": {
-        "type": "object",
-        "required": ["message"],
-        "properties": {
-          "message": {
-            "type": "string",
-            "example": "Logout success"
-          }
-        }
-      },
       "UserInformation": {
         "type": "object",
         "required": [
@@ -417,14 +413,15 @@
           "weight",
           "height",
           "kef",
-          "gender"
+          "gender",
+          "yourGoal"
         ],
         "properties": {
           "name": {
             "type": "string",
             "pattern": "^[a-zA-Zа-яА-Я]+(([' -][a-zA-Zа-яА-Я ])?[a-zA-Zа-яА-Я]*)*$",
             "example": "Jacob Mercer"
-          },          
+          },
           "age": {
             "type": "integer",
             "minimum": 1,
@@ -435,7 +432,7 @@
             "type": "integer",
             "minimum": 5,
             "maximum": 300,
-            "example": "82"
+            "example": "80"
           },
           "height": {
             "type": "integer",
@@ -452,58 +449,273 @@
             "type": "string",
             "enum": ["male", "female"],
             "example": "male"
-          }        
-        }
-      },
-      "UpdateUserInformationAnd Setting": {
-        "type": "object",
-        "required": [
-          "name",
-          "age",
-          "weight",
-          "height",
-          "kef",
-          "gender",
-          "recommendedWater"
-        ],
-        "properties": {
-          "password": {
-            "name": "string",
-            "example": "Jacob Mercer"
           },
-          "age": {
-            "name": "string",
-            "example": 30
-          },
-          "weight": {
-            "name": "string",
-            "example": 80
-          },
-          "height": {
-            "name": "string",
-            "example": 180
-          },
-          "kef": {
-            "name": "string",
-            "example": 1.2
-          },
-          "gender": {
-            "name": "string",
-            "example": "male"
-          },
-          "recommendedWater": {
-            "type": "integer",
-            "example": 2400
+          "yourGoal": {
+            "type": "string",
+            "enum": ["lose fat", "maintain", "gain muscle"],
+            "example": "lose fat"
           }
         }
       },
+
+      "UserRegistration": {
+        "type": "object",
+        "required": ["email"],
+        "properties": {
+          "code": {
+            "type": "integer",
+            "description": "Positive status code",
+            "example": 200
+          },
+          "email": {
+            "type": "string",
+            "example": "jacob@gmail.com"
+          }
+        }
+      },
+      "UserWithTokenSerializer": {
+        "type": "object",
+        "required": ["token"],
+        "properties": {
+          "code": {
+            "type": "integer",
+            "description": "Positive status code",
+            "example": 200
+          },
+          "token": {
+            "type": "string",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY1N2YyZmQ2MjAyNGNkMzFjYTNhZDYzNyIsImlhdCI6MTcwMjgzNDMwMCwiZXhwIjoxNzAzNjYyMzAwfQ.Ch5pvle9Oon-r1eErOkd4J7qYY8yAcyhHyhdongUTy4"
+          }
+        }
+      },
+      "NewPasswordResetResponse": {
+        "type": "object",
+        "required": ["message", "password"],
+        "properties": {
+          "code": {
+            "type": "integer",
+            "description": "Positive status code",
+            "example": 200
+          },
+          "message": {
+            "type": "string",
+            "example": "This is your new password as requested"
+          },
+          "password": {
+            "type": "string",
+            "example": "Uakgb_J5m9g-0JDMbcJqLJ"
+          }
+        }
+      },
+      "SignOutUser": {
+        "type": "object",
+        "required": ["message"],
+        "properties": {
+          "code": {
+            "type": "integer",
+            "description": "Positive status code",
+            "example": 204
+          },
+          "message": {
+            "type": "string",
+            "example": "Logout success"
+          }
+        }
+      },
+      "SendingUserData": {
+        "type": "object",
+        "required": [
+          "user",
+          "recommendedCalories",
+          "caloriesToday",
+          "recommendedWater",
+          "waterToday",
+          "recommendedFood"
+        ],
+        "properties": {
+          "code": {
+            "type": "integer",
+            "description": "Positive status code",
+            "example": 200
+          },
+          "user": {
+            "type": "object",
+            "required": [
+              "name",
+              "avatarURL",
+              "age",
+              "weight",
+              "height",
+              "kef",
+              "gender",
+              "yourGoal"
+            ],
+            "properties": {
+              "name": {
+                "type": "string",
+                "example": "Jacob Mercer"
+              },
+              "avatarURL": {
+                "type": "string",
+                "example": "//www.gravatar.com/avatar/2eea8cfac156ef8898796b1dcd1a84e7"
+              },
+              "age": {
+                "type": "integer",
+                "example": 30
+              },
+              "weight": {
+                "type": "integer",
+                "example": 82
+              },
+              "height": {
+                "type": "integer",
+                "example": 180
+              },
+              "kef": {
+                "type": "number",
+                "example": 1.2
+              },
+              "gender": {
+                "type": "string",
+                "example": "male"
+              },
+              "yourGoal": {
+                "type": "string",
+                "example": "lose fat"
+              }
+            }
+          },
+          "recommendedCalories": {
+            "type": "object",
+            "required": ["calories", "protein", "fat", "carbohydrates"],
+            "properties": {
+              "calories": {
+                "type": "integer",
+                "example": 2260
+              },
+              "protein": {
+                "type": "integer",
+                "example": 560
+              },
+              "fat": {
+                "type": "integer",
+                "example": 450
+              },
+              "carbohydrates": {
+                "type": "integer",
+                "example": 1250
+              }
+            }
+          },
+          "caloriesToday": {
+            "type": "object",
+            "required": ["calories", "date", "protein", "fat", "carbohydrates"],
+            "properties": {
+              "calories": {
+                "type": "integer",
+                "example": 2250
+              },
+              "date": {
+                "type": "string",
+                "example": "2023.12.19"
+              },
+              "protein": {
+                "type": "integer",
+                "example": 560
+              },
+              "fat": {
+                "type": "integer",
+                "example": 450
+              },
+              "carbohydrates": {
+                "type": "integer",
+                "example": 1240
+              }
+            }
+          },
+          "recommendedWater": {
+            "type": "integer",
+            "example": 2500
+          },
+          "waterToday": {
+            "type": "object",
+            "required": ["water", "date"],
+            "properties": {
+              "water": {
+                "type": "integer",
+                "example": 2400
+              },
+              "date": {
+                "type": "string",
+                "example": "2023.12.19"
+              }
+            }
+          },
+          "recommendedFood": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "required": ["name", "amount", "img", "calories", "nutrition"],
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Apples"
+                },
+                "amount": {
+                  "type": "string",
+                  "example": "100 g"
+                },
+                "img": {
+                  "type": "string",
+                  "format": "uri",
+                  "example": "https://ftp.goit.study/img/you_health/Apples.png"
+                },
+                "calories": {
+                  "type": "integer",
+                  "required": ["carbohydrates", "protein", "fat"],
+                  "example": 52
+                },
+                "nutrition": {
+                  "type": "object",
+                  "properties": {
+                    "carbohydrates": {
+                      "type": "number",
+                      "example": 14
+                    },
+                    "protein": {
+                      "type": "number",
+                      "example": 0.3
+                    },
+                    "fat": {
+                      "type": "number",
+                      "example": 0.2
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "UpdateUserInformation": {
+        "type": "object",
+        "required": ["message"],
+        "properties": {
+          "code": {
+            "type": "integer",
+            "description": "Positive status code",
+            "example": 200
+          },
+          "message": {
+            "type": "string",
+            "example": "Settings were successfully updated"
+          }
+        }
+      },
+
       "errorBadRequestResponse": {
         "type": "object",
         "properties": {
-          "status": {
-            "type": "string",
-            "example": "failure"
-          },
           "code": {
             "type": "integer",
             "description": "Error status code",
@@ -519,10 +731,6 @@
       "errorUnauthorizedResponse": {
         "type": "object",
         "properties": {
-          "status": {
-            "type": "string",
-            "example": "failure"
-          },
           "code": {
             "type": "integer",
             "description": "Error status code",
@@ -538,10 +746,6 @@
       "errorUserTokenExpiredResponse": {
         "type": "object",
         "properties": {
-          "status": {
-            "type": "string",
-            "example": "failure"
-          },
           "code": {
             "type": "integer",
             "description": "Error status code",
@@ -554,13 +758,24 @@
           }
         }
       },
+      "errorNotfound": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "integer",
+            "description": "Error status code",
+            "example": 404
+          },
+          "message": {
+            "type": "string",
+            "description": "Error message",
+            "example": "Notfound"
+          }
+        }
+      },
       "errorRemoveCategoryResponse": {
         "type": "object",
         "properties": {
-          "status": {
-            "type": "string",
-            "example": "failure"
-          },
           "code": {
             "type": "integer",
             "description": "Error status code",
